styles/index.css
/* ... */
.navbar-projects-btn {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  justify-content: flex-start;
  border-radius: 10px;
  margin: 10px;
}

.navbar-projects-btn-link {
  display: none;
  padding: 10px;
}

.navbar-projects-btn-icon {
  color: var(--color-white);
  width: 30px;
  min-width: 16px;
  height: 30px;
  flex-shrink: 0;
}

.navbar-content {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  max-width: 100%;
  column-gap: 16px;
  margin-right: 15px;
}

.navbar-brand {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  column-gap: 20px;
}

.navbar-brand-link {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  width: 100%;
  height: auto;
}

.navbar-logo {
  width: 44px;
  height: auto;
  flex-shrink: 0;
}

.navbar-logo-spacer {
  width: 10px;
  min-width: 10px;
  max-width: 10px;
}

.navbar-brand-name {
  color: var(--color-white);
  font-family: var(--font-primary);
  font-weight: 700;
  white-space: pre;
}

.navbar-links {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  column-gap: 20px;
  margin-right: 16px;
}

.navbar-link {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
  color: var(--color-white);
  column-gap: 10px;
  padding: 8px;
}

.navbar-link-icon {
  height: 30px;
  margin: 10px;
  color: var(--color-white);
}

.navbar-link-label {
  color: var(--color-white);
}

/* =====================
   Hero
   ===================== */
.hero {
  display: grid;
  align-content: flex-start;
  justify-items: center;
  min-height: 600px;
  background: url(../images/dotorg-projects-banner.png) top 50% left 50% / cover no-repeat;
  grid-template-columns:
    var(--viewport-gap)
    1fr
    minmax(0, var(--wide-chunk))
    min(var(--standard-width), calc(100% - var(--viewport-gap) * 2))
    minmax(0, var(--wide-chunk))
    1fr
    var(--viewport-gap);
}

.hero > * { grid-column: 4; }

.hero-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  width: 100%;
  margin-top: 100px;
  padding: 8px;
}

.hero-title {
  font-family: var(--font-primary);
  color: var(--color-white);
  font-weight: 700;
  font-size: 64px;
  line-height: 1;
  letter-spacing: -1px;
  white-space: pre;
  margin: 30px;
}

.hero-subtitle {
  width: 100%;
  text-align: center;
  white-space: pre-wrap;
  color: var(--color-white);
  font-size: 32px;
  font-weight: 600;
  line-height: 1.2;
  margin: 60px 20px 20px;
}

/* =====================
   About Us
   ===================== */
.about-us {
  display: grid;
  align-content: flex-start;
  justify-items: center;
  min-height: 300px;
  background: var(--color-accent-transparent);
  grid-template-columns:
    var(--viewport-gap)
    1fr
    minmax(0, var(--wide-chunk))
    min(var(--standard-width), calc(100% - var(--viewport-gap) * 2))
    minmax(0, var(--wide-chunk))
    1fr
    var(--viewport-gap);
}

.about-us > * { grid-column: 4; }

.about-us-video {
  width: 100%;
  aspect-ratio: 16 / 9;
  margin: 10%;
}

/* =====================
   Latest Release
   ===================== */
.latest-release {
  display: grid;
  align-content: space-evenly;
  justify-items: center;
  min-height: 800px;
  grid-template-columns:
    var(--viewport-gap)
    1fr
    minmax(0, var(--wide-chunk))
    min(var(--standard-width), calc(100% - var(--viewport-gap) * 2))
    minmax(0, var(--wide-chunk))
    1fr
    var(--viewport-gap);
}

.latest-release > * { grid-column: 4; }

.latest-release-title {
  width: 100%;
  text-align: center;
  font-weight: 700;
  font-size: 64px;
  line-height: 1;
  letter-spacing: -1px;
}

.latest-release-content {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  justify-content: space-between;
  width: 100%;
  column-gap: 10px;
  padding: 8px;
  grid-column: 3 / -3;
}

.latest-release-projects {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  width: 100%;
  row-gap: 10px;
  padding: 8px;
}

.project-row {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  justify-content: space-around;
  width: 100%;
  column-gap: 10px;
  padding: 8px;
}

.project-logo-col {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  row-gap: 10px;
  padding: 8px;
}

.project-logo {
  height: 120px;
  width: auto;
  object-fit: cover;
}

.project-info {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  row-gap: 10px;
  padding: 8px;
  width: 100%;
}

.project-title {
  width: 100%;
  font-size: 24pt;
  font-weight: 700;
  line-height: 1.2;
  margin: 0;
  white-space: nowrap;
}

.project-title--ep {
  color: var(--color-brand-light);
}

.project-description {
  width: 100%;
}

.latest-release-screenshot {
  display: flex;
  align-items: stretch;
  justify-content: space-around;
  padding: 8px;
}

.screenshot-img {
  height: 425px;
  width: auto;
  object-fit: contain;
}

.latest-release-links {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: auto;
  padding: 8px;
}

.release-link {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  height: auto;
  column-gap: 10px;
  width: 90%;
  padding: 8px;
}

.release-link-icon {
  height: 30px;
  object-fit: cover;
}

.release-link-icon--nuget {
  height: 25px;
  width: 25px;
  flex-shrink: 0;
}
/* ... */

